# acton-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: .copilot-instructions.md
.github/instructions/: documentation.instructions.md
.github/workflows/: tests.yml
acton_agent/: __init__.py  logging_config.py
acton_agent/agent/: __init__.py  agent.py  agent_stream.py  client.py  exceptions.py  memory.py  models.py  parser.py  prompts.py  retry.py  streaming_parser.py  streaming_util.py  tools.py
acton_agent/client/: openai_client.py  openrouter.py
acton_agent/memory/: base.py
acton_agent/parsers/: __init__.py  base.py  streaming.py  streaming_util.py
acton_agent/tools/: __init__.py  base.py  function_tool.py  models.py  openapi_tool.py  registry.py  requests_tool.py
docs/: README.md  advanced-topics.md  api-reference.md  architecture.md  core-concepts.md  faq.md  getting-started.md
docs/examples/: README.md
examples/: README.md  config_example.py  custom_tool_example.py  function_tool_example.py  http_request_example.py  logging_example.py  requests_tool_example.py  streaming_example.py  toolset_params_example.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_streaming.py  test_agent_toolset_integration.py  test_client.py  test_config.py  test_dependencies.py  test_exceptions.py  test_logging.py  test_memory.py  test_models.py  test_openai_client.py  test_openapi_tool.py  test_parser.py  test_process_output.py  test_prompts.py  test_requests_tool.py  test_retry.py  test_streaming.py  test_streaming_parser.py  test_streaming_util.py  test_streaming_util_no_duplicates.py  test_tools.py  test_toolset.py  test_toolset_params.py
toolio_agent/agent/: __init__.py  agent.py  agent_stream.py  client.py  exceptions.py  models.py  parser.py  prompts.py  retry.py  tools.py
toolio_agent/client/: __init__.py  openai_client.py  openrouter.py
toolio_agent/tools/: requests_tool.py
